# linisreport

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MAINTAINER_GUIDE.md  README.md  pyproject.toml
linisreport/: __main__.py  app.py  discovery.py  loader.py  model.py  storage.py
linisreport/parser/: log.py  report.py
