# pyproject.toml
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linisreport"
version = "1.0.0"
description = "Textual TUI to browse archived Lynis audits (lynis.log + lynis-report.dat)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "textual>=0.50.0",
  "rich>=13.0.0",
]

[project.scripts]
linisreport = "linisreport.app:run"
