[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linisreport"
version = "1.1.1"
description = "TUI viewer for Lynis security audit reports"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Ghost" },
]
keywords = ["security", "lynis", "audit", "tui", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "textual>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/VOTRE_USERNAME/linisreport"
Repository = "https://github.com/VOTRE_USERNAME/linisreport"

[project.scripts]
linisreport = "linisreport.app:run"